fix: overflow-hidden during load

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -6,10 +6,6 @@ body {
   background: #f9f9f9;
 }
 
-.fix {
-  overflow: hidden;
-}
-
 .fade-out {
   opacity: 0;
   transition: 0.3s ease-out;
